tests/snapshots/examples_fixtures/optimizations__tail_recursion.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/optimizations/tail_recursion.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/optimizations/tail_recursion.flx:49:1
   |
49 | print("Factorial(5):", result1);
   | ^^^^^

Hint:
  Define it first: let print = ...;


error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/optimizations/tail_recursion.flx:50:1
   |
50 | print("Fibonacci(10):", result2);
   | ^^^^^

Hint:
  Define it first: let print = ...;

Found 2 errors.
== stdout ==
<not executed>
